<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:background="@drawable/background_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:background="@drawable/background_bubble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/contact"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/imageViewAvatar"/>

        <TextView
                style="@style/Title"
                android:text="@string/anne_droid"
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar"
                tools:layout_editor_absoluteX="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_marginTop="0dp"
                    style="@style/ProfileItem"
                    android:text="@string/birthday_march_21st"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonCalendar"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/set_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/address_182_n_union_ave_farmington_ut_84025"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonMaps"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/view_on_maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonTaxi"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/order_a_taxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/hobbies_gardening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonSearch"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/more_about_gardening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonListen"
                    android:text="@string/listen"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/website_example_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonWebsite"
                    android:text="@string/visit_website"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/phone_123_456_890"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonCall"
                    android:text="@string/call"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/ProfileItem"
                    android:text="@string/email_anne_example_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonEmail"
                    android:text="@string/email"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonContact"
                    android:text="@string/export_contact"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>